--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mgmco/react-test-recorder",
+  "name": "react-test-recorder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
