--- a/src/examples/MERN/package.json
+++ b/src/examples/MERN/package.json
@@ -13,9 +13,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.5.9",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "mongodb": "^3.5.9"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
