--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "react-test-recorder",
-  "version": "0.0.2",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.9",
+  "description": "Generate jest files based on recorded 'live' site navigation",
+  "main": "dist/Recorder.jsx",
+  "bin": {
+    "record": "src/server/index.js"
+  },
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "test:watch": "jest --watchAll"
   },
   "keywords": [],
@@ -13,8 +17,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -32,6 +38,7 @@
     "eslint-plugin-react": "^7.19.0",
     "jest": "^25.2.7",
     "prettier": "^2.0.2",
+    "react": "^16.13.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
