--- a/examples/frontend/simple/package.json
+++ b/examples/frontend/simple/package.json
@@ -4,17 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon ./backend/server",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "record": "node ../../../src/server/index.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.9"
-  },
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/plugin-transform-runtime": "^7.10.3",
@@ -23,7 +17,6 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "nodemon": "^2.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
