--- a/examples/frontend/simple/package.json
+++ b/examples/frontend/simple/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "record": "node ../../../src/server/index.js"
+    "record": "node ../../../src/server/index.js",
+    "test": "jest -c .jestrc.json"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +15,21 @@
     "@babel/plugin-transform-runtime": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "@testing-library/dom": "^7.17.1",
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.4.1",
+    "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "history": "^5.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.1.0",
+    "jest-css-modules-transform": "^4.0.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-image-snapshot": "^4.0.2",
+    "jest-transform-css": "^2.0.0",
+    "jest-transform-file": "^1.1.1",
+    "jsdom-screenshot": "^3.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
