--- a/examples/frontend/simple/package.json
+++ b/examples/frontend/simple/package.json
@@ -24,7 +24,6 @@
     "history": "^5.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
-    "jest-css-modules-transform": "^4.0.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-image-snapshot": "^4.0.2",
     "jest-transform-css": "^2.0.0",
@@ -33,5 +32,13 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "formik": "^2.1.4",
+    "prop-types": "^15.7.2",
+    "yup": "^0.29.1"
   }
 }
